# kedro-polislike-pipelines

./: .gitignore  BRANCHING_PIPELINE_README.md  DEFAULT_PIPELINE_README.md  Makefile  README.md  TODO.md  VARIANTS_README.md  pyproject.toml  requirements.txt  test_cache.sqlite
.github/workflows/: deploy.yml
conf/base/: catalog.yml  catalog_experimental.yml  catalog_globals.yml  globals.yml  parameters.yml  parameters_experimental.yml
scripts/: fix_api_paths.py  run_pipelines.py
src/kedro_polis_classic/: pipeline_registry.py  settings.py
src/kedro_polis_classic/datasets/: pandas.py  polis_api.py
src/kedro_polis_classic/datasets/pandas/: csv_dataset.py
src/kedro_polis_classic/estimators/: builtins.py
src/kedro_polis_classic/pipelines/: builder.py  components.py  config.py  registry.py
src/kedro_polis_classic/pipelines/experimental/: nodes.py  pipeline.py
src/kedro_polis_classic/pipelines/geographic/: nodes.py
src/kedro_polis_classic/pipelines/polis/: nodes.py  pipeline.py  utils.py
src/kedro_polis_classic/pipelines/preprocessing/: pipeline.py
src/kedro_polis_classic/sklearn/: cluster.py  impute.py  sample_filter.py
src/kedro_polislike_pipelines/: pipeline_registry.py  utils.py
src/kedro_polislike_pipelines/estimators/: builtins.py
src/kedro_polislike_pipelines/pipelines/default/: nodes.py
src/kedro_polislike_pipelines/pipelines/preprocessing/: pipeline.py
src/kedro_polislike_pipelines/sklearn/: impute.py
