[project]
name = "kedro_polis_classic"
version = "0.1.0"
authors = [
    { name = "Patrick Connolly", email = "patrick.c.connolly@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "kedro>=0.19.8",
    "kedro-datasets[pandas]>=4.1.0",
    "kedro-viz>=12.0.0",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kedro_polis_classic"]

[tool.kedro]
package_name = "kedro_polis_classic"
project_name = "kedro_polis_classic"
kedro_init_version = "1.0.0"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "2f7648433d654496b56766f9dafd9f85"
